NEW: release DJI Payload-SDK version 3.14.0
Signed-off-by: dji-dev <dev@dji.com>

--- a/samples/sample_c/platform/rtos_freertos/gd32f527_development_board/project/armgcc/CMakeLists.txt
+++ b/samples/sample_c/platform/rtos_freertos/gd32f527_development_board/project/armgcc/CMakeLists.txt
@@ -79,6 +79,7 @@ include_directories (
     ../../../../../../../modules/authentication/ciu98/huada_lib/inc
     ../../../../../../../modules/authentication
     ../../../../../../../modules/authentication/ciu98
+    ../../../../../../../modules/network_rtk/include
     ../../drivers/CMSIS/include
     ../../drivers/CMSIS/GD/GD32F5xx/Include
     ../../drivers/BSP
