--- a/samples/sample_c/module_sample/hms/hms_text/cn/hms_text_config.json
+++ b/samples/sample_c/module_sample/hms/hms_text/cn/hms_text_config.json
@@ -61,13 +61,13 @@
       {
         "hms_error_code": "0x1E020004",
         "hms_interface": {
-          "message_title": "HMS测试文案: 我是错误码标题4",
-          "message_content": "HMS测试文案: 我是错误码内容4"
+          "message_title": "负载网络较差",
+          "message_content": "请检查飞行器周围网络或关闭增强图传"
         },
         "fpv_interface": {
-          "message_on_the_ground": "HMS测试文案: 我在地面发生了错误4",
+          "message_on_the_ground": "负载网络较差,请检查飞行器周围网络或关闭增强图传",
           "is_keep_history_on_the_ground": true,
-          "message_in_the_sky": "HMS测试文案: 我在空中发生了错误4",
+          "message_in_the_sky": "负载网络较差,请检查飞行器周围网络或关闭增强图传",
           "is_keep_history_in_the_sky": true
         }
       }
