--- a/samples/sample_c/module_sample/hms/hms_text/en/hms_text_config.json
+++ b/samples/sample_c/module_sample/hms/hms_text/en/hms_text_config.json
@@ -61,13 +61,13 @@
       {
         "hms_error_code": "0x1E020004",
         "hms_interface": {
-          "message_title": "HMS test text: I am error code Title 4",
-          "message_content": "HMS test text: I am error code Content 4"
+          "message_title": "Payload Network Poor",
+          "message_content": "Please check the network around the aircraft or disable Enhanced Transmission"
         },
         "fpv_interface": {
-          "message_on_the_ground": "HMS test text: I got error on the ground 4",
+          "message_on_the_ground": "Payload network is poor. Please check the network around the aircraft or disable Enhanced Transmission",
           "is_keep_history_on_the_ground": true,
-          "message_in_the_sky": "HMS test text: I got error in the sky 4",
+          "message_in_the_sky": "Payload network is poor. Please check the network around the aircraft or disable Enhanced Transmission",
           "is_keep_history_in_the_sky": true
         }
       }
